SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository and in snapshots and future releases.
===============================================================================================

Enhancements:

Object tree: Improved split pane sizing behavior.

#582 View Objects window alongside SQL
   New toolbar button "Show Object tree besides editor" shows an additional Object tree besides the current SQL editor.

#581 JSON and XML export allow to select the charset/encoding
  Info: The export function is available for tables (table's right mouse menu) and SQL queries (editor's right mouse menu / tools popup ctrl+t / toolbar)

Introduced Java 13 compatibility.

SQL editor: When control key is down tables are marked as hyper links.
  Note: With control key down mouse click on a table opens the table in the Object tree.
  Also note: This feature can be switched of in menu File --> New Session Properties --> tab SQL --> section "Jump to object tree".

SQL results: The column lists of the "Find column" dialog of now over right mouse menus to copy column names to clipboard.

#25 Passwords can be saved encrypted.
  The Alias dialog has a new check box "Save password encrypted".
  When a new Alias is added this check box is switched off by default.
  Encryption and decryption is done using javax.crypto.


#394 Completion notification sound for long running SQLs.
  The panel indicating a running query now has a checkbox to play a completion notification sound.
  Next to the check box there's a button to configure sound notifications.


Bug fixes:

#1408 File import dialog didn't remember encoding.

Object tree: The "Refresh item" right mouse menu function sometimes failed to restore the tree selection correctly.

After Session start the Object tree once and again was empty.
