@@ -12,3 +12,7 @@ ColumnCopyType.copy.selected.column.names=Copy column names
 ColumnCopyType.copy.selected.column.names.comma.separated=Copy column names comma separated
 ColumnCopyType.copy.selected.qualified.column.names=Copy qualified column names
 ColumnCopyType.copy.selected.qualified.column.names.comma.separated=Copy qualified column names comma separated
+
+
+FindColumnDlg.ckeckbox.find.in.table.names=Find in table names
+FindColumnDlg.ckeckbox.find.in.table.names.tooltip=<html>When different tables are found in a result the table names are shown in brackets.<br>Check this too look for matches in table names as well as in column names.</html>
